[refactor]: create services and adapters for handlers logic
