# internal/gateway/api/http/wallet.go
@@ -4,10 +4,8 @@ import (
 	"fmt"
 	"net/http"
 
-	pb "github.com/SlayerSv/payments/gen/wallet"
 	"github.com/SlayerSv/payments/internal/shared/errs"
 	"github.com/SlayerSv/payments/internal/shared/models"
-	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 // GetWallet gets user's wallet
@@ -23,17 +21,16 @@ import (
 // @Router       /me/wallets/{wallet_id} [get]
 func (app *App) GetWallet(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	accID, err := app.ExtractPathValue(r, "wallet_id")
+	walletID, err := app.ExtractPathValue(r, "wallet_id")
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error extracting wallet id from path: %w", errs.BadRequest, err))
 		return
 	}
-	resp, err := app.Clients.Wallet.Get(ctx, &pb.GetRequest{Id: accID})
+	wallet, err := app.walletService.Get(ctx, walletID)
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting wallet: %w", errs.Internal, err))
 		return
 	}
-	wallet := pbToAcc(resp.GetWallet())
 	app.Encode(w, r, wallet)
 }
 
@@ -49,14 +46,10 @@ func (app *App) GetWallet(w http.ResponseWriter, r *http.Request) {
 // @Router       /me/wallets [get]
 func (app *App) GetAllWallets(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	resp, err := app.Clients.Wallet.GetAll(ctx, &pb.GetAllRequest{OwnerId: ""})
+	wallets, err := app.walletService.GetAll(ctx)
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting wallets: %w", errs.Internal, err))
 		return
-	}
-	wallets := models.WalletsDTO{}
-	for _, acc := range resp.Wallets {
-		wallets.Wallets = append(wallets.Wallets, pbToAcc(acc))
 	}
 	app.Encode(w, r, wallets)
 }
@@ -73,13 +66,13 @@ func (app *App) GetAllWallets(w http.ResponseWriter, r *http.Request) {
 // @Router       /me/wallets [post]
 func (app *App) CreateWallet(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	resp, err := app.Clients.Wallet.Create(ctx, &emptypb.Empty{})
+	ID, err := app.walletService.Create(ctx)
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error creating wallet: %w", errs.Internal, err))
 		return
 	}
 	w.WriteHeader(201)
-	app.Encode(w, r, models.WalletID{ID: resp.GetWalletId()})
+	app.Encode(w, r, models.WalletID{ID: ID})
 }
 
 // DeleteWallet Deletes wallet
@@ -95,24 +88,15 @@ func (app *App) CreateWallet(w http.ResponseWriter, r *http.Request) {
 // @Router       /me/wallets/{wallet_id} [delete]
 func (app *App) DeleteWallet(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	accID, err := app.ExtractPathValue(r, "wallet_id")
+	walletID, err := app.ExtractPathValue(r, "wallet_id")
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: missing id: %w", errs.BadRequest, err))
 		return
 	}
-	_, err = app.Clients.Wallet.Delete(ctx, &pb.DeleteRequest{Id: accID})
+	err = app.walletService.Delete(ctx, walletID)
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error deleting wallet: %w", errs.Internal, err))
 		return
 	}
 	w.WriteHeader(204)
-}
-
-func pbToAcc(acc *pb.Wallet) models.WalletDTO {
-	return models.WalletDTO{
-		ID:        acc.Id,
-		OwnerID:   acc.OwnerId,
-		Balance:   acc.Balance,
-		CreatedAt: acc.CreateAt.String(),
-	}
 }
